@@ -6,7 +6,6 @@ import com.google.gson.GsonBuilder;
 import com.google.gson.annotations.Expose;
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
-import org.bukkit.block.data.BlockData;
 import org.bukkit.util.Vector;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
@@ -17,6 +16,11 @@ import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
+/**
+ * Default {@link Schematic} implementation.
+ * Starting from the minimum location, the blocks are concatenated into a string, until the maximum location is reached.
+ * Each block is represented by a character. This character refers to a specific index in the palette.
+ */
 public class JsonSchematic implements FileType {
 
     private static final int START = '#';
@@ -45,12 +49,14 @@ public class JsonSchematic implements FileType {
     private Map<String, List<String>> waypoints;
 
     public JsonSchematic() {
+
     }
 
     public JsonSchematic(
             int dataVersion, String minecraftVersion,
             List<Integer> dimensions, List<String> palette,
-            String blocks) {
+            String blocks
+    ) {
         this.dataVersion = dataVersion;
         this.minecraftVersion = minecraftVersion;
         this.dimensions = dimensions;
@@ -62,7 +68,8 @@ public class JsonSchematic implements FileType {
     public JsonSchematic(
             int dataVersion, String minecraftVersion,
             List<Integer> dimensions, List<String> palette,
-            String blocks, Map<String, List<String>> waypoints) {
+            String blocks, Map<String, List<String>> waypoints
+    ) {
         this.dataVersion = dataVersion;
         this.minecraftVersion = minecraftVersion;
         this.dimensions = dimensions;
@@ -76,22 +83,15 @@ public class JsonSchematic implements FileType {
         Preconditions.checkNotNull(schematic, "Schematic is null");
         Preconditions.checkNotNull(file, "File is null");
 
-        Vector dimensionVector = schematic.getDimensions().subtract(new Vector(1, 1, 1));
-        List<Integer> dimensions = List.of(dimensionVector.getBlockX(), dimensionVector.getBlockY(), dimensionVector.getBlockZ());
-        List<String> palette = schematic.getPalette().stream()
-                .map(it -> it.getAsString(true))
-                .collect(Collectors.toList());
-        String serializedBlocks = String.join("", schematic.getBlocks().stream()
-                .map(this::getChar)
-                .collect(Collectors.toList()));
-        Map<String, List<String>> waypoints = schematic.getWaypoints().entrySet().stream()
-                .collect(Collectors.toMap(
-                        Map.Entry::getKey,
-                        entry -> entry.getValue().stream()
-                                .map(it -> it.getX() + "," + it.getY() + "," + it.getZ() + "," + it.getYaw() + "," + it.getPitch())
-                                .collect(Collectors.toList())));
+        var dimensionVector = schematic.getDimensions().subtract(new Vector(1, 1, 1));
+        var dimensions = List.of(dimensionVector.getBlockX(), dimensionVector.getBlockY(), dimensionVector.getBlockZ());
+        var palette = schematic.getPalette().stream().map(it -> it.getAsString(true)).toList();
+        var serializedBlocks = String.join("", schematic.getBlocks().stream().map(this::getChar).toList());
+        var waypoints = schematic.getWaypoints().entrySet().stream()
+                .collect(Collectors.toMap(Map.Entry::getKey, entry -> entry.getValue().stream()
+                        .map(it -> it.getX() + "," + it.getY() + "," + it.getZ() + "," + it.getYaw() + "," + it.getPitch()).toList()));
 
-        JsonSchematic jsonSchematic = new JsonSchematic(schematic.getDataVersion(), schematic.getMinecraftVersion(),
+        var jsonSchematic = new JsonSchematic(schematic.getDataVersion(), schematic.getMinecraftVersion(),
                 dimensions, palette, serializedBlocks, waypoints);
 
         try {
@@ -104,8 +104,9 @@ public class JsonSchematic implements FileType {
     }
 
     void write(File file, JsonSchematic type) throws IOException {
-        try (BufferedWriter writer = new BufferedWriter(new FileWriter(file))) {
+        try (var writer = new BufferedWriter(new FileWriter(file))) {
             GSON.toJson(type, writer);
+
             writer.flush();
         }
     }
@@ -117,26 +118,19 @@ public class JsonSchematic implements FileType {
         Preconditions.checkArgument(file.exists(), "File does not exist");
 
         try {
-            JsonSchematic serialized = read(file);
+            var serialized = read(file);
 
-            int dataVersion = serialized.dataVersion;
-            String mcVersion = serialized.minecraftVersion;
-            List<String> unparsedPalette = serialized.palette;
+            var dataVersion = serialized.dataVersion;
+            var mcVersion = serialized.minecraftVersion;
+            var unparsedPalette = serialized.palette;
 
-            List<BlockData> palette = unparsedPalette.stream()
-                    .map(Bukkit::createBlockData)
-                    .collect(Collectors.toList());
-
-            Vector dimensions = new Vector(serialized.dimensions.get(0),
+            var palette = unparsedPalette.stream().map(Bukkit::createBlockData).toList();
+            var dimensions = new Vector(serialized.dimensions.get(0),
                     serialized.dimensions.get(1),
                     serialized.dimensions.get(2));
+            var blocks = serialized.blocks.chars().mapToObj(c -> fromChar((char) c)).toList();
 
-            List<Short> blocks = serialized.blocks.chars()
-                    .mapToObj(c -> fromChar((char) c))
-                    .map(Short::valueOf)
-                    .collect(Collectors.toList());
-
-            Map<String, List<Location>> waypoints = new HashMap<>();
+            var waypoints = new HashMap<String, List<Location>>();
             if (dataVersion >= 2) {
                 serialized.waypoints.forEach((key, locations) ->
                         waypoints.put(key, locations.stream()
@@ -146,37 +140,38 @@ public class JsonSchematic implements FileType {
                                         Double.parseDouble(it[2]),
                                         Float.parseFloat(it[3]),
                                         Float.parseFloat(it[4])))
-                                .collect(Collectors.toList())));
+                                .toList()));
             }
 
-            return new Schematic(dataVersion, mcVersion, dimensions, palette, blocks, waypoints);
-
+            return new Schematic(Schematic.DATA_VERSION, mcVersion, dimensions,
+                    palette, blocks, waypoints);
         } catch (IOException e) {
             return null;
         }
     }
 
     JsonSchematic read(File file) throws IOException {
-        try (BufferedReader reader = new BufferedReader(new FileReader(file))) {
+        try (var reader = new BufferedReader(new FileReader(file))) {
             return GSON.fromJson(reader, JsonSchematic.class);
         }
     }
 
+    // avoids control chars
     String getChar(short id) {
         return chars.computeIfAbsent(id, it -> {
             do {
                 currentChar++;
             } while (Character.isISOControl(currentChar));
 
-            return Character.toString((char) currentChar);
+            return Character.toString(currentChar);
         });
     }
 
     short fromChar(char c) {
         return controls.computeIfAbsent(c, it -> {
-            int controlSince = 0;
+            var controlSince = 0;
 
-            for (int i = START; i < c; i++) {
+            for (var i = START; i < c; i++) {
                 if (Character.isISOControl(i)) {
                     controlSince++;
                 }
